# blueairble-rs

./: Cargo.toml  build.rs
src/: discovery.rs  lib.rs  service.rs
src/protos/: custom_commands.proto  wifi_constants.proto
