[package]
name = "blueairble-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
btleplug = { path = "../btleplug" }
bytes = "1.6.1"
ctr = "0.9.2"
futures = "0.3.30"
hex = "0.4.3"
protobuf = { version = "3.5.0", features = ["with-bytes"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.10.0"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }

[build-dependencies]
protobuf-codegen = "3.5.0"
